[package]
name = "txfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = { version = "0.29.0", features = ["async"] }
anchor-spl =  { version = "0.29.0", features = ["token"] }
base64 = "0.21.5"
cached = "0.46.1"
futures = "0.3.30"
solana-client = "1.16"
solana-sdk = "1.16"
solana-transaction-status = "1.16"
tokio = "1.35.1"
bincode = "1.3.3"
